--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 Flask==1.0.2
 gunicorn==19.9.0
+gensim==3.6.0
+emoji==0.5.1
+tabulate==0.8.2
+editdistance==0.5.2
+numpy==1.16.0
+cython==0.29.10
+urllib3==1.25.2
