--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Flask==1.1.1
-gunicorn==20.0.4
-gensim==3.6.0
+grpcio==1.27.1
+protobuf==3.11.3
+numpy==1.17.4
+gensim==3.8.1
 emoji==0.5.1
 tabulate==0.8.2
 editdistance==0.5.2
-numpy==1.16.4
-cython==0.29.10
-urllib3==1.25.2
