--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         uses: salsify/action-detect-and-tag-new-version@v1.0.3
         with:
           version-command: |
-            bash -o pipefail -c "poetry version | awk '{ print \$2 }'"
+            poetry version | awk '{ print $2 }'
 
       - name: Bump version for developmental release
         if: "! steps.check-version.outputs.tag"
