--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,6 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-added-large-files
-  - repo: https://github.com/prettier/prettier
-    rev: 2.0.5
-    hooks:
-      - id: prettier
   - repo: https://github.com/psf/black
     rev: 19.10b0
     hooks:
@@ -30,3 +26,7 @@ repos:
     hooks:
       - id: reorder-python-imports
         args: [--application-directories=src]
+  - repo: https://github.com/prettier/pre-commit
+    rev: v2.1.2
+    hooks:
+      - id: prettier
