--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,5 @@ protobuf = "^3.13.0"
 [tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
