--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ grpcio = "^1.33.2"
 protobuf = "^3.13.0"
 
 [tool.poetry.dev-dependencies]
+reorder-python-imports = "^2.3.6"
+black = "^20.8b1"
+pre-commit-hooks = "^3.3.0"
+flake8 = "^3.8.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
